Update BBQ Chicken Pizza Form.html

--- a/BBQ Chicken Pizza Form.html
+++ b/BBQ Chicken Pizza Form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>BBQ Chicken Pizza Form</title>
+        <link rel="stylesheet" href="BBQ Chicken Pizza Form.css">
     </head>
     <body>
         <div id="header"><img src="BBQ image.jpg" height="100px" width="100px"><h1>BBQ Chicken Pizza Form</h1></div>
