Update Domino's Pizza Order Form.html

--- a/Domino's Pizza Order Form.html
+++ b/Domino's Pizza Order Form.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Domino's Pizza Order Form</title>
-        <link rel="stylesheet" href="Domino's.css"
+        <link rel="stylesheet" href="Domino's.css">
     </head>
     <body>
         <div id="header"><img src="Domino's Pizza logo.png" height="100px" width="100px"><h1>Domino's Pizza</h1></div>
