Update Prawn Sensation Pizza Form.html

--- a/Prawn Sensation Pizza Form.html
+++ b/Prawn Sensation Pizza Form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Prawn Sensation Pizza Form</title>
+        <link rel="stylesheet" href="Prawn Sensation Pizza Form.css">
     </head>
     <body>
         <div id="header"><img src="PS image.jpg" height="100px" width="100px"><h1>Prawn Sensation Pizza Form</h1></div>
