Update Seafood Delight Pizza Form.html

--- a/Seafood Delight Pizza Form.html
+++ b/Seafood Delight Pizza Form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Seafood Delight Pizza Form</title>
+        <link rel="stylesheet" href="Seafood Delight Pizza Form.css">
     </head>
     <body>
         <div id="header"><img src="SD image.jpg" height="100px" width="100px"><h1>Seafood Delight Pizza Form</h1></div>
