Update Simply Cheese Pizza Form.html

--- a/Simply Cheese Pizza Form.html
+++ b/Simply Cheese Pizza Form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Simply Cheese Pizza Form</title>
+        <link rel="stylesheet" href="Simply Cheese Pizza Form.css">
     </head>
     <body>
         <div id="header"><img src="SC image.jpg" height="100px" width="100px"><h1>Simplay Cheese Pizza Form</h1></div>
