Update Smoky Pepperoni Mushroom Form.html

--- a/Smoky Pepperoni Mushroom Form.html
+++ b/Smoky Pepperoni Mushroom Form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Smoky Pepperoni Mushroom Pizza Form</title>
+        <link rel="stylesheet" href="Smoky Pepperoni Mushroom Pizza Form.css">
     </head>
     <body>
         <div id="header"><img src="SPM image.jpg" height="100px" width="100px"><h1>Smoky Pepperoni Mushroom Pizza Form</h1></div>
