Update Spicy Sausage Pizza Form.html

--- a/Spicy Sausage Pizza Form.html
+++ b/Spicy Sausage Pizza Form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Spicy Sausage Pizza Form</title>
+        <link rel="stylesheet" href="Spicy Sausage Pizza Form.css">
     </head>
     <body>
         <div id="header"><img src="SS imag.jpg" height="100px" width="100px"><h1>Spicy Sausage Pizza Form</h1></div>
