Update Ultimate Hawaiian Pizza Form.html

--- a/Ultimate Hawaiian Pizza Form.html
+++ b/Ultimate Hawaiian Pizza Form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Ultimate Hawaiian Pizza Form</title>
+        <link rel="stylesheet" href="Ultimate Hawaiian Pizza Form.css">
     </head>
     <body>
         <div id="header"><img src="UHP image.jpg" height="100px" width="100px"><h1>Ultimate Hawaiian Pizza Form</h1></div>
